--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
 
 main {
 
-  width: 128rem;
-  height: 72rem;
+  width: 100vw;
+  height: 100vh;
 
   display: flex;
   flex-direction: column;
@@ -25,7 +25,6 @@ main {
   align-items: center;
   gap: 1.6rem;
 
-  margin: auto;
 
 }
 
@@ -73,4 +72,6 @@ button svg {
   position: absolute;
   right: 0;
   bottom: 0;
+
+  margin: 0 4rem 3.2rem 0;
 }
